Bug 344639 - apper update applet says "unknown role unknown state"
Summary: apper update applet says "unknown role unknown state"
Status: RESOLVED FIXED
Alias: None
Product: apper
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Daniel Nicoletti
URL: https://bugzilla.opensuse.org/show_bu...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-27 20:43 UTC by John Andrew McInnes
Modified: 2015-03-27 15:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Andrew McInnes 2015-02-27 20:43:32 UTC
Fedora 21 and openSUSE 13.2

When you open the apper update tray applet, and click the "+" to expand information about an update, it shows "unknown state unknown role" while loading the information. Also many times it gets stuck there forever trying to load (this may be a separate bug?).

Reproducible: Always

Steps to Reproduce:
1. click update tray icon
2. click +
3.

Actual Results:  
says "unknown role unknown state" while loading

Expected Results:  
no weird error messages

openSUSE bugzilla:  https://bugzilla.opensuse.org/show_bug.cgi?id=908194
Comment 1 Wolfgang Bauer 2015-03-27 15:30:55 UTC
Git commit 4fb5409e8304e01d536fb03df4a1001879ec3574 by Wolfgang Bauer.
Committed on 27/03/2015 at 15:28.
Pushed by wbauer into branch 'master'.

Fix display of status/role messages in the plasmoid

The QML plasmoid calls a C++ function to get the message strings for the
current status/role. But due to a limitation in Qt4, Enum parameters can
only be used when the Enum is defined in the same class as the C++
function, which is not the case here (the Enums come from PackageKit).
See also https://bugreports.qt.io/browse/QTBUG-19741

So the functions always get passed 0, which means "Unknown", and the
plasmoid always displays "Unknown state"/"Unknown role type".

This patch overloads the necessary functions to accept int parameters as
well to fix this.
REVIEW: 123150

M  +10   -0    libapper/PkStrings.cpp
M  +3    -0    libapper/PkStrings.h

http://commits.kde.org/apper/4fb5409e8304e01d536fb03df4a1001879ec3574